<resources>
    <string name="app_name">AlmacenamientoMemoria</string>

    <string name="hint_texto">Ingrese algún texto</string>
    <string name="donde_guardarlo">Donde desea guardarlo?</string>
    <string name="almacenamiento_interno">Almacenamiento Interno</string>
    <string name="almacenmaiento_externo">Almacenamiento Externo</string>

    <string name="resultados">Aca se mostrarán los resultados</string>
</resources>
