<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/content_main">

    <LinearLayout
        android:id="@+id/panel_superior_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/texto_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_texto"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/titulo_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/donde_guardarlo" />

        <Button
            android:id="@+id/interno_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:text="@string/almacenamiento_interno" />

        <Button
            android:id="@+id/externo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/stat_notify_sdcard_usb"
            android:text="@string/almacenmaiento_externo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultados_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panel_superior_linear_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/resultados_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resultados" />

    </LinearLayout>

</RelativeLayout>